--- a/VibeCity.html
+++ b/VibeCity.html
@@ -3,9 +3,21 @@
 <html>
 
 <head> 
+
+<style>
+	html{
+		background:url(img/deja-vu.jpg) no-repeat center center fixed;
+		-webkit-background-size:cover;
+		-moz-background-size:cover;
+		-o-background-size:cover;
+		background-size: cover;
+	}
+
 <title> Vibe City Site </title> 
 
 <link rel="stylesheet" type="text/css" href="css/VibeCity.css"/>
+
+</style>
 
 <meta name="Description" content="Vibe City Website to Feed Your Mental, Spiritual, and Physical Needs">
 <meta name="keywords" content="Vibe, City, Vibecity, Podcast, Spiritual, Wellness, Meditation, Awareness, Healing, Health, Mental, Physical, Mind, Body, Spirit" />
@@ -15,8 +27,8 @@
 
 </head> 
 
-
 <body>
+
 	<header> Welcome to Vibe City! </header> 
 	
 	<p1> 
