--- a/VibeCity.html
+++ b/VibeCity.html
@@ -3,21 +3,23 @@
 <html>
 
 <head> 
+	<style>
+		body {color: yellow}
 
-<style>
-	html{
-		background:url(img/deja-vu.jpg) no-repeat center center fixed;
+		html {
+			/*background-color: grey;
+			background:url(img/love.jpg) no-repeat center center fixed;
 		-webkit-background-size:cover;
 		-moz-background-size:cover;
 		-o-background-size:cover;
-		background-size: cover;
+		background-size: cover;*/
 	}
+	
+	</style>
 
 <title> Vibe City Site </title> 
 
-<link rel="stylesheet" type="text/css" href="css/VibeCity.css"/>
-
-</style>
+<link rel="stylesheet" type="text/css" href="css/VibeCity.css" /> 
 
 <meta name="Description" content="Vibe City Website to Feed Your Mental, Spiritual, and Physical Needs">
 <meta name="keywords" content="Vibe, City, Vibecity, Podcast, Spiritual, Wellness, Meditation, Awareness, Healing, Health, Mental, Physical, Mind, Body, Spirit" />
@@ -27,8 +29,8 @@
 
 </head> 
 
-<body>
 
+<body>
 	<header> Welcome to Vibe City! </header> 
 	
 	<p1> 
